Adding in team logic
